--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@ button {
 /* Desktop stuff */
 @media (min-width: 768px) {
   .background {
-    background-position-y: 80%;
+    background-position-y: 50%;
+    background-size: 80%;
   }
   .sign {
     margin-bottom: 100px;
