change background color and add more elements to arrays

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   height: 100%;
-  background-color: rgb(33, 84, 128);
+  background-color: #0097b2;
   display: flex;
   align-items: center;
   justify-content: space-between;
