--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@ body {
   margin: 0;
   height: 100%;
   background-color: #0097b2;
-  align-items: center;
-  justify-content: space-between;
+}
+
+header {
+  display: flex;
+  justify-content: center;
 }
 
 .background {
@@ -21,17 +24,8 @@ body {
 }
 
 .title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  background-image: url("./assets/title.png");
-  background-size: 430px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position-y: top;
+  width: 430px;
+  max-width: 100%;
   margin-top: 20px;
 }
 
@@ -52,10 +46,7 @@ button {
 .pueblo-button {
   display: flex;
   justify-content: center;
-  position: absolute;
-  top: 290;
-  left: 0;
-  right: 0;
+  margin-top: 40px;
 }
 
 #response {
