--- a/style.css
+++ b/style.css
@@ -99,6 +99,30 @@ button {
   bottom: 0;
 }
 
+.emoji-link {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    z-index: 9999;
+    text-decoration: none;
+  }
+
+  .logo-link {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 9999;
+    opacity: 100%;
+
+  }
+ 
+  .logo-link img {
+    width: 35px;
+    height: 35px;
+    opacity: 50%;
+  }
+
 /* Desktop stuff */
 @media (min-width: 768px) {
   .background {
@@ -127,5 +151,16 @@ button {
     height: 160px;
     margin-right: 90px;
     margin-left: 90px;
+  }
+
+  .emoji-link {
+    opacity: 50%;
+  }
+  .emoji-link:hover {
+    opacity: 100%;
+  }
+  .logo-link img:hover {
+    opacity: 100%;
+    filter: invert(50%) sepia(80%) saturate(100%) hue-rotate(160deg);
   }
 }
